--- a/index.css
+++ b/index.css
@@ -421,4 +421,198 @@ h5+button>img{
   #switch-right{
     grid-area: sright;
   }
+  #switch-left>p:nth-child(3){
+    color: #06a99b;
+    font-size: 20px;
+    font-weight: 600;
+  }
   /* switch  end*/
+
+/* Case study start */
+  #case-study{
+    width: 100%;
+
+  }
+  #case-study>p{
+    text-align: center;
+    font-size: 30px;
+    font-weight: 600;
+    margin-top: 90px;
+  }
+  #case1{
+    grid-area: case1;
+    border-radius: 20px;
+    height: 250px;
+    box-shadow: 5px 10px 8px #888888;
+  }
+  #case1>img,#case1>p,#case1>a{
+    padding:0 10px 0 10px; 
+  }
+  #case2{
+    grid-area: case2;
+    border-radius: 20px;
+    height: 250px;
+    box-shadow: 5px 10px 8px #888888;
+  }
+  #case2>img,#case2>p,#case2>a{
+    padding:0 10px 0 10px; 
+  }
+  #case3{
+    grid-area: case3;
+    border-radius: 20px;
+    height: 250px;
+    box-shadow: 5px 10px 8px #888888;
+  }
+  #case3>img{
+    width: 98px;
+  }
+  #case3>img,#case3>p,#case3>a{
+    padding:0 10px 0 10px; 
+  }
+  #case-study1{
+    width: 90%;
+    margin: auto;
+    display: grid;
+    gap: 20px;
+    grid-template-areas: 'case1 case2 case3';
+  }
+  #case1>h4{
+    text-align: center;
+    background-color: rgb(44, 208, 197);
+    color: white;
+    border-radius: 5px;
+    padding: 5px;
+
+  }
+  #case2>h4{
+    text-align: center;
+    color: white;
+    background-color: #f56f2f;
+    border-radius: 5px;
+    padding: 5px;
+
+  }
+  #case3>h4{
+    text-align: center;
+    color: white;
+    background-color: #5cc0f4;
+    border-radius: 5px;
+    padding: 5px;
+
+  }
+  #case1>a:nth-child(5){
+    background-image: url(https://niftypm.com/_nuxt/img/spot-green@2x.feb46d4.png);
+  }
+  #case2>a:nth-child(5){
+    background-image: url(https://niftypm.com/_nuxt/img/spot-orange@2x.72c2492.png);
+  }
+  #case3>a:nth-child(5){
+    background-image: url(https://niftypm.com/_nuxt/img/spot-blue@2x.4a1938d.png);
+  }
+  #case1>a:nth-child(5),#case2>a:nth-child(5),#case3>a:nth-child(5){
+    float: right;   
+    position: relative;
+    width: 110px;
+    height: 150px;
+    padding:5px;
+    text-align: center;
+    background-size: 100% ;
+    color: rgb(255, 255, 255);
+    background-repeat: no-repeat;
+    padding: 15px;
+}
+    
+  
+  #case1>a:nth-child(5)>h2, #case1>a:nth-child(5)>p,#case2>a:nth-child(5)>h2, #case2>a:nth-child(5)>p,#case3>a:nth-child(5)>h2, #case3>a:nth-child(5)>p{
+    margin: 0;
+
+  }
+  /* Case study end */
+
+  /* transform :start */
+    #transform{
+      width: 100%;
+      margin: auto;
+    }
+    #trans{
+      margin-top: 100px;
+      background-color: #00a99b;
+      border-radius: 20px;
+      display: grid;
+      gap: 20px;
+      overflow: hidden;
+      grid-template-areas: 't1left t1right';
+    }
+    #trans-left{
+      grid-area: t1left;
+      padding: 50px;
+      color: white;
+    }
+    #trans-left>p{
+      font-size: 20px;
+    }
+    #trans-left>div{
+      display: flex;
+    }
+    #trans-right{
+      grid-area: t1right;
+    }
+    #trans-left>div>input{
+      width: 50%;
+      padding: 15px;
+      margin: 10px;
+      border-radius: 10px;
+      border: 0;
+    }
+    #trans-left>div>button{
+      padding: 15px;
+      border-radius: 10px;
+     
+      margin-left: 5px;
+      border: 0;
+      background-color: white;
+      color: #02bdad;
+      font-size: 20px;
+    }
+    #trans-right>img{
+      padding-top: 70px;
+      min-width: 320px;
+      max-width: 420px;
+      margin: 0;
+      
+    }
+  /* transform end */
+  #footer{
+    margin-top: 50px;
+    display: grid;
+    gap: 30px;
+    grid-template-areas: 'f1 f2 f3 f4 f5 f6';
+    line-height: 1;
+    padding: 20px;
+    color: rgb(160, 152, 152);
+  }
+  #footer1>p:nth-child(1),#footer2>p:nth-child(1),#footer3>p:nth-child(1),#footer5>p:nth-child(1),#footer4>p:nth-child(1),#footer6>p:nth-child(1){
+    color: #6c729c;
+    font-weight: 900;
+    font-size: 13px;
+    margin-bottom: 50px;
+  }
+  #footer2{
+    grid-area: f2;
+  }
+  #footer3{
+    grid-area: f3;
+  }
+  #footer4{
+    grid-area: f4;
+  }
+  #footer5{
+    grid-area: f5;
+  }
+  #footer6{
+    grid-area: f6;
+  }
+  #footer1{
+    grid-area: f1;
+  }
+  /* footer start */
