--- a/index.css
+++ b/index.css
@@ -63,14 +63,37 @@ border-radius: 10px;
 box-shadow: 2px 2px 2px 2px #888888;
 }
 
-.dropdown-content a {
+.dropdown-content>p>a {
 color: black; 
-padding: 12px 16px;
 text-decoration: none;
-display: block;
+
+line-height: 0;
+}
+.dropdown-content>p{
+  padding: 10px;
+  margin: -10px;
+  
+}
+.dropdown-content>p{
+  display: grid;
+  gap: 20px;
+  padding: 10px;
+  grid-template-areas: 'a1 a2';
+}
+#orange{
+  font-size: 15px;
+  text-align: center;
+  color: #f56f2f;
+  padding: 15px;
+  }
+.dropdown-content>p>a:nth-child(1){
+grid-area: a1;
 text-align: left;
 }
-
+.dropdown-content>p>a:nth-child(2){
+  grid-area: a2;
+  text-align: right;
+}
 .dropdown:hover .dropdown-content {
 display: block;
 }
